[gd_scene load_steps=26 format=2]

[ext_resource path="res://units/MeleeGoblin.gd" type="Script" id=1]
[ext_resource path="res://images/enemies/MeleeGoblin 1.png" type="Texture" id=2]
[ext_resource path="res://ui/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/StatusType.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/enemies/MeleeGoblin 2.png" type="Texture" id=5]
[ext_resource path="res://images/enemies/meleegoblinleftmove/MeleeGoblinleftmove 6.png" type="Texture" id=6]
[ext_resource path="res://images/enemies/meleegoblinleftmove/MeleeGoblinleftmove 7.png" type="Texture" id=7]
[ext_resource path="res://images/enemies/meleegoblinleftmove/MeleeGoblinleftmove 5.png" type="Texture" id=8]
[ext_resource path="res://images/enemies/meleegoblinleftmove/MeleeGoblinleftmove 1.png" type="Texture" id=9]
[ext_resource path="res://images/enemies/meleegoblinleftmove/MeleeGoblinleftmove 2.png" type="Texture" id=10]
[ext_resource path="res://images/enemies/meleegoblinleftmove/MeleeGoblinleftmove 3.png" type="Texture" id=11]
[ext_resource path="res://images/enemies/meleegoblinleftmove/MeleeGoblinleftmove 4.png" type="Texture" id=12]
[ext_resource path="res://images/enemies/meleegoblinrightmove/MeleeGoblinRightmove 4.png" type="Texture" id=13]
[ext_resource path="res://images/enemies/meleegoblinrightmove/MeleeGoblinRightmove 3.png" type="Texture" id=14]
[ext_resource path="res://images/enemies/meleegoblinrightmove/MeleeGoblinRightmove 7.png" type="Texture" id=15]
[ext_resource path="res://images/enemies/meleegoblinrightmove/MeleeGoblinRightmove 6.png" type="Texture" id=16]
[ext_resource path="res://images/enemies/meleegoblinrightmove/MeleeGoblinRightmove 2.png" type="Texture" id=17]
[ext_resource path="res://images/enemies/meleegoblinrightmove/MeleeGoblinRightmove 5.png" type="Texture" id=18]
[ext_resource path="res://images/enemies/meleegoblinrightmove/MeleeGoblinRightmove 1.png" type="Texture" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.4872, 31.2029 )

[sub_resource type="CircleShape2D" id=2]
radius = 132.907

[sub_resource type="CircleShape2D" id=3]
radius = 11.1095

[sub_resource type="Animation" id=4]
resource_name = "LeftStill"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "MoveLeft"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "MoveRight"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 19 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 17 ) ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.0547867, -0.164354 )
shape = SubResource( 1 )

[node name="Vision" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource( 2 )

[node name="AttackZone" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 19 )

[node name="HealthBar" parent="Sprite" instance=ExtResource( 3 )]
margin_left = -9.87729
margin_top = -33.2179
margin_right = 6.12271
margin_bottom = -31.2179

[node name="StatusType" parent="." instance=ExtResource( 4 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "LeftStill"
anims/LeftStill = SubResource( 4 )
anims/MoveLeft = SubResource( 5 )
anims/MoveRight = SubResource( 6 )
